# rs-attendance

./: .appveyor.yml  .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  test.fish
migrations/2018-03-28-171658_create_students/: up.sql
migrations/2018-05-02-041420_create_users/: up.sql
migrations/2018-05-07-183650_users_students/: up.sql
src/: .models.rs.rustfmt  .schema.rs.rustfmt  cors.rs  db.rs  db_executor.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
test_migrations/2018-05-04-152811_test_data/: down.sql  up.sql
tests/: create_test.rs  delete_test.rs  get_test.rs  integration_tests.rs  update_test.rs  user_test.rs
tests/test_server/: mod.rs
webapp/: README.md  index.html  package.json
webapp/src/: App.vue  api.js
webapp/src/__mocks__/: api.js  api.js~
webapp/src/components/: DeleteStudent.vue  Login.vue  Nav.vue  NewStudent.vue  Register.vue  Student.vue  StudentsList.vue  UpdateStudent.vue  test.vue
webapp/src/router/: index.js
webapp/src/store/: index.js
webapp/test/unit/specs/: DeleteStudents.spec.js  Login.spec.js  Nav.spec.js  NewStudents.spec.js  Register.spec.js  StudentsList.spec.js  UpdateStudent.spec.js
