[package]
name = "attendance-rs"
version = "0.2.0"
authors = ["Akhil kp <akhilkpdasan@gmail.com>"]

[dependencies]
diesel = { version = "*", features = ["postgres"] }
dotenv = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
actix = "*"
actix-web = "*"
futures = "*"
bytes = "*"
http = "*"
num_cpus = "*"
